Fixed broken layout in cart modal, adjusted configurator heading, updated documentation

--- a/css/modal.css
+++ b/css/modal.css
@@ -214,9 +214,11 @@ body {
 }
 
 .modal-configurator-form-title {
-  margin-bottom: 2.4rem;
-  font-size: 4.4rem;
+  margin-bottom: 4.8rem;
+  font-size: 5.2rem;
   font-weight: 700;
+  /* text-align: center; */
+  margin-left: 8rem;
 }
 
 .modal-section-title.italic {
